[package]
authors = ["Dejan Bosanac <dejan@sensatic.net>"]
edition = "2018"
readme = "README.md"
name = "quick"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

rtt-target = { version = "0.3.0", features = ["cortex-m"] }
stm32l4xx-hal = { version = "0.6.0", features = ["rt", "stm32l4x5"] }
cast = { version = "=0.2.3", default-features = false }

# this lets you use `cargo fix`!
[[bin]]
name = "quick"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
